# simple-checkout-bot

./: README.md  WINDOWS_GUIDE.md  config.json  launch.bat  mypy.ini  pyproject.toml  requirements.txt  setup.bat  setup.py
mock_checkout/: README.md  index.html  run.sh  server.py
simple_bot/: README.md  WINDOWS_GUIDE.md  check_setup.sh  config.json  launch.bat
simple_bot/simple_bot/simple_bot/: README.md  setup.bat  setup.sh
src/star_citizen_checkout/: __init__.py  bot.py  browser.py  cli.py  config.json  config.py  error_recovery.py  logging.py  monitoring.py  page_interaction.py  retry_manager.py  shutdown.py
src/star_citizen_checkout/utils/: check_python.py
tests/: __init__.py  test_cli.py  test_error_recovery.py  test_monitoring.py  test_monitoring_integration.py  test_page_interaction.py  test_retry_manager.py  test_setup.py  test_shutdown.py
